SEO optimization: add robots.txt, sitemap.xml, structured data, optimize meta tags

--- a/index.html
+++ b/index.html
@@ -4,29 +4,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <title>OkapaDesign | Arte Original, Quadros IA, Música & Merchandising | Lisboa</title>
     <meta name="description"
-        content="Loja online de arte original, quadros feitos por IA, música independente, sons para produtores e merchandising artístico. Produtos criativos exclusivos. | Online store for original art, AI-generated paintings, independent music, sound samples and artistic merchandise.">
+        content="Loja de arte original em Lisboa. Quadros únicos, arte digital IA, música independente e merchandising artístico. Encomendas personalizadas. Envio Portugal e Europa.">
     <meta name="keywords"
-        content="arte original, arte contemporânea, arte digital, arte feita por IA, arte gerada por inteligência artificial, quadros originais, quadros modernos, ilustrações artísticas, música independente, música digital, sons para produtores, efeitos sonoros, merchandising artístico, loja de arte online, loja criativa, marketplace de artistas, produtos criativos exclusivos, original art, contemporary art, AI generated art, digital art download, limited edition art prints, independent music, digital albums download, sound effects library, music samples pack, online art store, creative marketplace">
-    <meta name="author" content="OkapaDesign">
+        content="okapadesign, okapa design, Cláudia Nunes, claudias4U, KlaudIAmusicrave, arte original, arte contemporânea, arte digital, arte IA, inteligência artificial, quadros originais, quadros modernos, pintura abstrata, ilustração, design gráfico, branding, identidade visual, música independente, música eletrónica, techno, sons para produtores, merchandising artístico, t-shirts personalizadas, loja arte online, galeria arte, comprar arte online, arte acessível, fine art prints, pop art, arte urbana, NFT, arte generativa, Lisboa, Portugal, estúdio criativo, presentes exclusivos, decoração sala, quadros decorativos">
+    <meta name="author" content="OkapaDesign - Cláudia Nunes">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://porpam82.github.io/okapadesign2/">
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://okapadesign.com/">
-    <meta property="og:title" content="OkapaDesign | Arte é para todos">
+    <meta property="og:url" content="https://porpam82.github.io/okapadesign2/">
+    <meta property="og:title" content="OkapaDesign | Arte Original & Design Criativo | Lisboa">
     <meta property="og:description"
-        content="Descubra pinturas originais e arte digital única. Transforme o seu espaço com designs exclusivos.">
-    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+        content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising. Encomendas personalizadas em Lisboa.">
+    <meta property="og:image" content="https://porpam82.github.io/okapadesign2/assets/og-image.jpg">
+    <meta property="og:locale" content="pt_PT">
+    <meta property="og:site_name" content="OkapaDesign">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://okapadesign.com/">
-    <meta property="twitter:title" content="OkapaDesign | Arte é para todos">
-    <meta property="twitter:description"
-        content="Descubra pinturas originais e arte digital única. Transforme o seu espaço com designs exclusivos.">
-    <meta property="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://porpam82.github.io/okapadesign2/">
+    <meta name="twitter:title" content="OkapaDesign | Arte Original & Design Criativo">
+    <meta name="twitter:description"
+        content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising.">
+    <meta name="twitter:image" content="https://porpam82.github.io/okapadesign2/assets/og-image.jpg">
 
-    <title>Arte Original, IA, Música & Merchandising | Loja Criativa Online</title>
+    <!-- Structured Data - Organization -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "OkapaDesign",
+        "alternateName": ["okapa design", "Okapa Design"],
+        "url": "https://porpam82.github.io/okapadesign2/",
+        "logo": "https://porpam82.github.io/okapadesign2/assets/logo.png",
+        "description": "Loja de arte original em Lisboa. Quadros únicos, arte digital IA, música independente e merchandising artístico.",
+        "foundingDate": "2021",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Lisboa",
+            "addressCountry": "PT"
+        },
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "okapadesign@gmail.com",
+            "contactType": "customer service"
+        },
+        "sameAs": [
+            "https://facebook.com/okapadesign",
+            "https://instagram.com/okapadesign",
+            "https://youtube.com/@klaudiamusicrave",
+            "https://tiktok.com/@okapadesign"
+        ]
+    }
+    </script>
+
+    <!-- Structured Data - WebSite (enables search box in Google) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "OkapaDesign",
+        "url": "https://porpam82.github.io/okapadesign2/",
+        "description": "Loja online de arte original, quadros IA, música e merchandising",
+        "inLanguage": ["pt-PT", "en"]
+    }
+    </script>
+
+    <!-- Structured Data - LocalBusiness -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ArtGallery",
+        "name": "OkapaDesign",
+        "image": "https://porpam82.github.io/okapadesign2/assets/og-image.jpg",
+        "url": "https://porpam82.github.io/okapadesign2/",
+        "telephone": "",
+        "email": "okapadesign@gmail.com",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Lisboa",
+            "addressCountry": "PT"
+        },
+        "priceRange": "€€",
+        "openingHoursSpecification": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
+            "opens": "00:00",
+            "closes": "23:59"
+        }
+    }
+    </script>
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -98,7 +172,8 @@
             <div class="container">
                 <div class="about__content">
                     <div class="about__image">
-                        <img src="images/artist.jpg" alt="Artista">
+                        <img src="images/artist.jpg"
+                            alt="Cláudia Nunes - Artista e Designer da OkapaDesign em Lisboa, Portugal">
                         <div class="about__decoration"></div>
                     </div>
                     <div class="about__info">
