SEO fixes: correct domain to okapadesign.com, add assets, fix lang/hreflang/favicon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 
 <head>
     <meta charset="UTF-8">
@@ -10,28 +10,39 @@
     <meta name="description"
         content="Loja de arte original em Lisboa. Quadros únicos, arte digital IA, música independente e merchandising artístico. Encomendas personalizadas. Envio Portugal e Europa.">
     <meta name="keywords"
-        content="okapadesign, okapa design, Cláudia Nunes, claudias4U, KlaudIAmusicrave, arte original, arte contemporânea, arte digital, arte IA, inteligência artificial, quadros originais, quadros modernos, pintura abstrata, ilustração, design gráfico, branding, identidade visual, música independente, música eletrónica, techno, sons para produtores, merchandising artístico, t-shirts personalizadas, loja arte online, galeria arte, comprar arte online, arte acessível, fine art prints, pop art, arte urbana, NFT, arte generativa, Lisboa, Portugal, estúdio criativo, presentes exclusivos, decoração sala, quadros decorativos">
+        content="okapadesign, okapa design, Cláudia Nunes, claudias4U, KlaudIAmusicrave, arte original, arte contemporânea, arte digital, arte IA, inteligência artificial, quadros originais, quadros modernos, pintura abstrata, ilustração, design gráfico, branding, identidade visual, web design, arquitetura, música independente, música eletrónica, techno, sons para produtores, merchandising artístico, t-shirts personalizadas, loja arte online, galeria arte, comprar arte online, arte acessível, fine art prints, pop art, arte urbana, NFT, arte generativa, Lisboa, Portugal, estúdio criativo, presentes exclusivos, decoração sala, quadros decorativos">
     <meta name="author" content="OkapaDesign - Cláudia Nunes">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://porpam82.github.io/okapadesign2/">
+    <link rel="canonical" href="https://okapadesign.com/">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="assets/logo.jpg">
+
+    <!-- Hreflang for multilingual -->
+    <link rel="alternate" hreflang="pt" href="https://okapadesign.com/">
+    <link rel="alternate" hreflang="en" href="https://okapadesign.com/?lang=en">
+    <link rel="alternate" hreflang="x-default" href="https://okapadesign.com/">
 
     <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://porpam82.github.io/okapadesign2/">
+    <meta property="og:url" content="https://okapadesign.com/">
     <meta property="og:title" content="OkapaDesign | Arte Original & Design Criativo | Lisboa">
     <meta property="og:description"
         content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising. Encomendas personalizadas em Lisboa.">
-    <meta property="og:image" content="https://porpam82.github.io/okapadesign2/assets/og-image.jpg">
+    <meta property="og:image" content="https://okapadesign.com/assets/og-image.jpg">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="538">
     <meta property="og:locale" content="pt_PT">
+    <meta property="og:locale:alternate" content="en_US">
     <meta property="og:site_name" content="OkapaDesign">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://porpam82.github.io/okapadesign2/">
+    <meta name="twitter:url" content="https://okapadesign.com/">
     <meta name="twitter:title" content="OkapaDesign | Arte Original & Design Criativo">
     <meta name="twitter:description"
         content="Loja de arte original. Quadros únicos, arte digital IA, música e merchandising.">
-    <meta name="twitter:image" content="https://porpam82.github.io/okapadesign2/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://okapadesign.com/assets/og-image.jpg">
 
     <!-- Structured Data - Organization -->
     <script type="application/ld+json">
@@ -40,9 +51,9 @@
         "@type": "Organization",
         "name": "OkapaDesign",
         "alternateName": ["okapa design", "Okapa Design"],
-        "url": "https://porpam82.github.io/okapadesign2/",
-        "logo": "https://porpam82.github.io/okapadesign2/assets/logo.png",
-        "description": "Loja de arte original em Lisboa. Quadros únicos, arte digital IA, música independente e merchandising artístico.",
+        "url": "https://okapadesign.com/",
+        "logo": "https://okapadesign.com/assets/logo.jpg",
+        "description": "Estúdio criativo em Lisboa - Arte original, design gráfico, web design e arquitetura. Quadros únicos, arte digital IA, música independente e merchandising artístico.",
         "foundingDate": "2021",
         "address": {
             "@type": "PostalAddress",
@@ -52,7 +63,8 @@
         "contactPoint": {
             "@type": "ContactPoint",
             "email": "okapadesign@gmail.com",
-            "contactType": "customer service"
+            "contactType": "customer service",
+            "availableLanguage": ["Portuguese", "English"]
         },
         "sameAs": [
             "https://facebook.com/okapadesign",
@@ -63,40 +75,33 @@
     }
     </script>
 
-    <!-- Structured Data - WebSite (enables search box in Google) -->
+    <!-- Structured Data - WebSite -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "OkapaDesign",
-        "url": "https://porpam82.github.io/okapadesign2/",
+        "url": "https://okapadesign.com/",
         "description": "Loja online de arte original, quadros IA, música e merchandising",
         "inLanguage": ["pt-PT", "en"]
     }
     </script>
 
-    <!-- Structured Data - LocalBusiness -->
+    <!-- Structured Data - ArtGallery -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "ArtGallery",
         "name": "OkapaDesign",
-        "image": "https://porpam82.github.io/okapadesign2/assets/og-image.jpg",
-        "url": "https://porpam82.github.io/okapadesign2/",
-        "telephone": "",
+        "image": "https://okapadesign.com/assets/og-image.jpg",
+        "url": "https://okapadesign.com/",
         "email": "okapadesign@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Lisboa",
             "addressCountry": "PT"
         },
-        "priceRange": "€€",
-        "openingHoursSpecification": {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"],
-            "opens": "00:00",
-            "closes": "23:59"
-        }
+        "priceRange": "€€"
     }
     </script>
 
