Add translations for buy modal (PT/EN)

--- a/index.html
+++ b/index.html
@@ -280,13 +280,14 @@
     <div id="buy-modal" class="modal">
         <div class="modal__content">
             <button class="modal__close" onclick="closeBuyModal()">✕</button>
-            <h3 class="modal__title">Como encomendar</h3>
+            <h3 class="modal__title" data-i18n="modal.title">Como encomendar</h3>
             <div class="modal__body">
-                <p>Gostou do produto? Na okapadesign gostamos de tratar de cada encomenda pessoalmente. Assim, entre em
+                <p data-i18n="modal.text">Gostou do produto? Na okapadesign gostamos de tratar de cada encomenda
+                    pessoalmente. Assim, entre em
                     contato via e-mail do autor ou para o e-mail geral.</p>
                 <div style="margin-top: 2rem; display: flex; gap: 1rem; flex-wrap: wrap;">
                     <a id="modal-email-btn" href="#" class="btn btn--primary"
-                        style="width: 100%; justify-content: center;">Enviar Email Agora</a>
+                        style="width: 100%; justify-content: center;" data-i18n="modal.button">Enviar Email Agora</a>
                 </div>
             </div>
         </div>
