Translate footer links and copyright text

--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
                     <p data-i18n="footer.tagline">Pinturas e arte digital para seu espaço e estilo.</p>
                 </div>
                 <div class="footer__links">
-                    <a href="#home">Início</a>
-                    <a href="#shop">Loja</a>
-                    <a href="#about">Sobre</a>
-                    <a href="#contact">Contato</a>
+                    <a href="#home" data-i18n="nav.home">Início</a>
+                    <a href="#shop" data-i18n="nav.shop">Loja</a>
+                    <a href="#about" data-i18n="nav.about">Sobre</a>
+                    <a href="#contact" data-i18n="nav.contact">Contato</a>
                 </div>
             </div>
             <div class="footer__bottom">
-                <p>© 2026 okapadesign. Todos os direitos reservados.</p>
+                <p data-i18n="footer.copyright">© 2026 okapadesign. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
